# Heat_Simulation

./: .gitignore  CMakeLists.txt  README.md  config.ini  flake.nix
dependencies/: CMakeLists.txt
include/: ConfigManager.hpp  HeatMap.hpp  HeatMapGradient.hpp  PDE.hpp  PDESolver.hpp  PDESolverStrategy.hpp  Simulation.hpp  SimulationCommands.hpp  SimulationConfig.hpp  SimulationManager.hpp  SimulationSnapshot.hpp
include/graphics/: SimulationControlPanel.hpp  SimulationToolbar.hpp  SimulationWindow.hpp
include/model/: AbstractBoundaryCondition.hpp  AbstractPDE.hpp  AbstractPDESolver.hpp  ConvectionDiffusionPDE.hpp  ForwardDifferenceSolver.hpp  GridRepresentation.hpp  Mesh.hpp  ParabolicPDE.hpp
include/util/: SPSCDoubleBuffer.hpp  SPSCQueue.hpp
src/: ConfigManager.cpp  ForwardDifference.cpp  ForwardDifferenceSolver.cpp  GridRepresentation.cpp  HeatMap.cpp  HeatMapGradient.cpp  PDE.cpp  PDESolver.cpp  Simulation.cpp  SimulationCommands.cpp  SimulationControlPanel.cpp  SimulationManager.cpp  SimulationToolbar.cpp  SimulationWindow.cpp  main.cpp
src/model/: AbstractPDE.cpp  ConvectionDiffusionPDE.cpp  ForwardDifference.cpp  ForwardDifferenceSolver.cpp  Mesh.cpp  PDE.cpp  PDESolver.cpp
